fix paragraph spacing

--- a/main.css
+++ b/main.css
@@ -266,6 +266,7 @@ p{
 	font-family: "EB Garamond", serif;
 	color: #1b3455;
   font-size: 18px;
+  line-height: 120%;
 }
 footer{
 	clear: both;
